CSS: Fixing margin being too high, affecting feltCardBackground from being fully seen

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -860,7 +860,7 @@ body {
     background-image:
     linear-gradient(rgba(255, 96, 96, 0.473),rgb(58, 0, 0)),
     radial-gradient(ellipse at top, rgb(255, 143, 143) 50%, rgb(255, 0, 0));
-    margin-bottom: 4.5rem;
+    margin-bottom: 5.5rem;
     box-shadow: 0px 0px 1px rgb(255, 0, 0), 1px 1px 2px 1px rgb(43, 7, 7) inset;
 
 }
